WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263101
REGRESSION(
269016@main
) [Win] fast/forms/listbox-zero-item-height.html is randomly failing
https://bugs.webkit.org/show_bug.cgi?id=263101
Summary
REGRESSION(269016@main) [Win] fast/forms/listbox-zero-item-height.html is ran...
Fujii Hironori
Reported
2023-10-12 18:26:58 PDT
The following tests are randomly failing after
269016@main
(
bug#262768
). fast/css3-text/css3-text-decoration/text-decoration-skip/text-decoration-skip-ink-svg.html fast/css3-text/css3-text-decoration/text-decoration-thickness.html fast/forms/listbox-zero-item-height.html
> python .\Tools\Scripts\run-webkit-tests --debug --iterations=5 -v fast/forms/listbox-zero-item-height.html --run-singly
[1/5] fast/forms/listbox-zero-item-height.html failed (text diff) [2/5] fast/forms/listbox-zero-item-height.html passed [3/5] fast/forms/listbox-zero-item-height.html passed [4/5] fast/forms/listbox-zero-item-height.html failed (text diff) [5/5] fast/forms/listbox-zero-item-height.html passed I'm observing constant pass or failures without --run-singly. [1/5] fast/forms/listbox-zero-item-height.html passed [2/5] fast/forms/listbox-zero-item-height.html passed [3/5] fast/forms/listbox-zero-item-height.html passed [4/5] fast/forms/listbox-zero-item-height.html passed [5/5] fast/forms/listbox-zero-item-height.html passed [1/5] fast/forms/listbox-zero-item-height.html failed (text diff) [2/5] fast/forms/listbox-zero-item-height.html failed (text diff) [3/5] fast/forms/listbox-zero-item-height.html failed (text diff) [4/5] fast/forms/listbox-zero-item-height.html failed (text diff) [5/5] fast/forms/listbox-zero-item-height.html failed (text diff)
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-10-15 19:27:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19101
EWS
Comment 2
2023-10-15 22:23:59 PDT
Committed
269354@main
(15855ea0a707): <
https://commits.webkit.org/269354@main
> Reviewed commits have been landed. Closing PR #19101 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-10-15 22:24:15 PDT
<
rdar://problem/116999521
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug