REGRESSION(269016@main) [Win] fast/forms/listbox-zero-item-height.html is randomly failing https://bugs.webkit.org/show_bug.cgi?id=263101

Reviewed by Ross Kirsling.

The following tests were randomly failing after 269016@main..

  fast/css3-text/css3-text-decoration/text-decoration-skip/text-decoration-skip-ink-svg.html
  fast/css3-text/css3-text-decoration/text-decoration-thickness.html
  fast/forms/listbox-zero-item-height.html

Uninitialized OUTLINETEXTMETRIC was used if GetOutlineTextMetrics
failed. Check the return value of GetOutlineTextMetrics.

* LayoutTests/platform/wincairo/TestExpectations:
* Source/WebCore/platform/graphics/win/SimpleFontDataCairoWin.cpp:

Canonical link: https://commits.webkit.org/269354@main